--- a/index/index.html
+++ b/index/index.html
@@ -19,7 +19,7 @@
         <div class="container">
           <div class="hi__row">
             <div class="hi__body">
-              <div class="hi__title">Это моя первая страница!</div>
+              <div class="hi__title">Это моя первая (пробная) страница!</div>
                 <ul class="hi__list" id="about">
                   <li>Меня зовут Сабарз Ахадов!</li>
                   <li>Работабю инжинером но хотел бы Fronten-разработчиком</li>
